--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="ac">AC</string>
     <string name="_3">3</string>
     <string name="_9">9</string>
+    <string name="textview">TextView</string>
 </resources>
